--- a/travel_together_app/travel_together/templates/auth/signup2.html
+++ b/travel_together_app/travel_together/templates/auth/signup2.html
@@ -76,7 +76,7 @@
     </div>
     <div class="info-container">
         <img src="../../static/resources/logo-full.png" class="info-image" />
-        <h1>Welcome to &trade;</h1>
+        <h1>Welcome to SchoolTrip&trade;</h1>
         <p>Plan trips, share unforgettable adventures, and meet fellow travelers who love discovering places just like
             you.</p>
     </div>
